--- a/src/main/java/org/example/home.html
+++ b/src/main/java/org/example/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <table>
+        <table class = "nav">
             <tr>
                 <td>
 
@@ -42,25 +42,26 @@
 <div>
 
 </div>
-    <h1> Farm2Table </h1>
+    <h1 class = "title"> Farm2Table </h1>
 <div>
-<h2> Team members </h2>
-    <h4> filler text </h4>
-    <table>
+<h2 class = "title" > Team members </h2>
+    <br>
+    <h4 class = "title" > filler text </h4>
+    <table class = "table-m">
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class = "members"></td>
+            <td class = "members"></td>
+            <td class = "members"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class = "members"></td>
+            <td class = "members"></td>
+            <td class = "members"></td>
         </tr>
     </table>
 </div>
 <div>
-    <h1> CONTACT US</h1>
+    <h1 class = "title"> CONTACT US</h1>
     <table>
         <tr>
             <td></td>
